--- a/style.css
+++ b/style.css
@@ -66,6 +66,7 @@ section, .contact {
 .grid a {
     text-decoration: none;
     color: black;
+    width: 600px;
 }
 .project:hover {
     transform: scale(1.02);
