--- a/style.css
+++ b/style.css
@@ -66,7 +66,6 @@ section, .contact {
 .grid a {
     text-decoration: none;
     color: black;
-    width: 600px;
 }
 .project:hover {
     transform: scale(1.02);
@@ -102,4 +101,21 @@ section, .contact {
 footer h3, h4 {
     font-weight: 500;
 }
-    
+
+@media (max-width: 768px) {
+    .about {
+        margin-top: 100px;
+    }
+
+    .myname {
+        display: none;
+    }
+
+    header ul {
+        padding: 0;
+    }
+
+    header li {
+        padding-right: 0;
+    }
+}
